--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,13 @@ spring.thymeleaf.mode=HTML
 # ===== FILE UPLOAD =====
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-request-size=100MB
+
+# Tomcat file upload limits
+server.tomcat.max-http-form-post-size=100MB
+server.tomcat.max-swallow-size=100MB
+server.tomcat.max-parameter-count=10000
+server.tomcat.max-part-count=200
 
 # Custom upload directory
 app.upload.dir=uploads/
